update windowmanager